--- a/section-6/websocket.html
+++ b/section-6/websocket.html
@@ -8,6 +8,11 @@
 </head>
 <body>
   
+  <form action="javascript:void(0)">
+    <input type="text" name="message" id="message" placeholder="message">
+    <button>submit</button>
+  </form>
+
   <script src="websocket-client.js"></script>
 </body>
 </html>
